--- a/ui_ux/easy-kitchen.html
+++ b/ui_ux/easy-kitchen.html
@@ -193,7 +193,7 @@
     </div>
   </footer>
 
-  <!-- Minimal JS for navigation + chips -->
+  <!-- JS for navigation + chips -->
   <script>
     const panels = [...document.querySelectorAll('.panel')];
     const show = id => panels.forEach(p => p.classList.toggle('active', p.id === id));
