feature: favorite recipe model, schema, router, and frontend implementation

--- a/frontend/ingredients.html
+++ b/frontend/ingredients.html
@@ -12,9 +12,10 @@
         <div class="shell">
             <div class="brand">🥗 Easy <span>Kitchen</span></div>
             <nav class="top-nav">
-                <button class="link" id="homeBtn">Home</button>
-                <button class="link" id="pantryBtn">My Pantry</button>
-                <button class="link" id="logoutBtn">Logout</button>
+                <a href="#" id="navHome">Home</a>
+                <a href="#" id="navPantry">My Pantry</a>
+                <a href="#" id="navPastRecipes">Past Recipes</a>
+                <a href="#" id="navLogout">Logout</a>
             </nav>
         </div>
     </header>
@@ -120,3 +121,9 @@
 
 </body>
 </html>
+
+<!-- Past Recipes: Favorites Section -->
+<section id="pastRecipesSection" class="panel">
+  <h2>Favorites</h2>
+  <div id="favoritesList" class="card-grid"></div>
+</section>
