--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,6 +13,7 @@
             <div class="brand">🥗 Easy <span>Kitchen</span></div>
             <nav class="top-nav">
                 <button class="link" onclick="window.location.href='index.html'">Home</button>
+                <button class="link" onclick="window.location.href='contact.html'">Contact</button>
             </nav>
         </div>
     </header>
