--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
             <nav class="top-nav">
                 <button class="link" onclick="window.location.href='index.html'">Home</button>
                 <button class="link" onclick="window.location.href='login.html'">Login</button>
+                <button class="link" onclick="window.location.href='contact.html'">Contact</button>
             </nav>
         </div>
     </header>
