Added Onboarding page and in app step by step walk through

--- a/frontend/ingredients.html
+++ b/frontend/ingredients.html
@@ -6,6 +6,7 @@
     <title>Easy Kitchen - My Pantry</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="onboarding.css">
 </head>
 <body>
     <header class="site-header">
@@ -138,5 +139,6 @@
     <!-- Load jsPDF before grocerylist.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="grocerylist.js"></script>
+    <script src="onboarding.js"></script>
 </body>
 </html>
