--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -6,6 +6,7 @@
   <title>Easy Kitchen - Dietary Preferences</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style1.css" />
+  <link rel="stylesheet" href="onboarding.css" />
 </head>
 <body>
   <header class="site-header">
@@ -75,5 +76,6 @@
   <script src="config.js"></script>
   <script src="auth.js"></script>
   <script src="settings.js"></script>
+  <script src="onboarding.js"></script>
 </body>
 </html>
