Add Clear Filters button UI + JS logic (User Story #101) – frontend updates

--- a/frontend/ingredients.html
+++ b/frontend/ingredients.html
@@ -67,6 +67,13 @@
                     </div>
                 </div>
                 
+                <!-- NEW BUTTON -->
+                <div class="actions" style="margin-top: 10px;">
+                    <button class="btn outline" id="clearFiltersBtn" disabled>
+                        Clear Filters
+                    </button>
+                </div>
+                
                 <div id="recipeResults" class="recipe-grid">
                     <p class="loading">Loading recipes...</p>
                 </div>
