--- a/frontend/ingredients.html
+++ b/frontend/ingredients.html
@@ -16,6 +16,7 @@
                 <button class="link" id="homeBtn">Home</button>
                 <button class="link" id="dietBtn">Dietary</button>
                 <button class="link" id="pantryBtn">My Pantry</button>
+                <button class="link" id="favoritesBtn">Favorites</button>
                 <button class="link" id="logoutBtn">Logout</button>
                 <button class="link" onclick="window.location.href='contact.html'">Contact</button>
             </nav>
