feat: frontend favorites functionality

--- a/frontend/ingredients.html
+++ b/frontend/ingredients.html
@@ -154,7 +154,7 @@
 <!-- Past Recipes: Favorites Section (moved inside <main>) -->
 <section id="pastRecipesSection" class="panel">
     <div class="card">
-        <h2>Past Recipes</h2>
+        <h2>Favorite Recipes</h2>
         <div id="favoritesList" class="recipe-grid"></div>
     </div>
 </section>
