--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -29,19 +29,48 @@
 
                 <form id="contactForm" class="form">
                     <div id="contactStatus" class="error-message"></div>
-                    <label>Name
-                        <input type="text" name="name" placeholder="Your Name" required minlength="1" maxlength="100">
+
+                    <label for="contactName">Name
+                        <input
+                            id="contactName"
+                            type="text"
+                            name="name"
+                            placeholder="Your Name"
+                            required
+                            minlength="1"
+                            maxlength="100"
+                        >
                     </label>
-                    <label>Email
-                        <input type="email" name="email" placeholder="you@example.com" required maxlength="120">
+
+                    <label for="contactEmail">Email
+                        <input
+                            id="contactEmail"
+                            type="email"
+                            name="email"
+                            placeholder="you@example.com"
+                            required
+                            maxlength="120"
+                        >
                     </label>
-                    <label>Message
-                        <textarea name="message" placeholder="How can we help?" required minlength="1" maxlength="5000" rows="6"></textarea>
+
+                    <label for="contactMessage">Message
+                        <textarea
+                            id="contactMessage"
+                            name="message"
+                            placeholder="How can we help?"
+                            required
+                            minlength="1"
+                            maxlength="5000"
+                            rows="6"
+                        ></textarea>
                     </label>
+
                     <button id="sendBtn" class="btn primary" type="submit">Send</button>
                 </form>
 
-                <p id="successMsg" class="muted" style="display:none; margin-top: 10px;">Message sent successfully!</p>
+                <p id="successMsg" class="muted" style="display:none; margin-top: 10px;">
+                    Message sent successfully!
+                </p>
             </div>
         </section>
     </main>
